# Vayu

./: .gitignore  README.md
backend/: cleanup_old_data.py  create_aggregates.py  pyproject.toml  test_api.py  test_db.py
backend/app/: config.py  crud.py  database.py  main.py  models.py  optimize_db.py  schemas.py
esp32/: node.ino
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: HistoricalChart.jsx  LiveChart.jsx  Statistics.jsx
frontend/src/services/: api.js
vayu-frontend/: index.html  package-lock.json  package.json
